完成資料庫的存取跟顯示表格

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,15 +11,35 @@
         }
 
     
-        
+        table{
+            width: 80%;
+            margin: 0 auto;
+        }
+
+        th{
+            background: wheat;
+        }
     </style>
 </head>
 <body>
     <h1>細懸浮微粒資料（PM2.5）</h1>
-  
-   
-
-   
-   
+    <table border="1">
+        <thead>
+            <tr>
+                {% for col in columns %}
+                <th>{{col}}</th>
+                {% endfor %}
+            </tr>
+        </thead>
+        <tbody>
+            {% for row in datas %}
+            <tr>
+                {% for data in row %}
+                <td>{{data}}</td>
+                {% endfor %}
+             </tr>
+            {% endfor %}
+        </tbody>
+    </table>  
 </body>
 </html>
