--- a/templates/index.html
+++ b/templates/index.html
@@ -23,10 +23,11 @@
 </head>
 <body>
     <h1>細懸浮微粒資料（PM2.5）</h1>
+    <a href="/update-db">更新資料庫</a>
     <table border="1">
         <thead>
             <tr>
-                {% for col in columns %}
+                {% for col in columns[1:] %}
                 <th>{{col}}</th>
                 {% endfor %}
             </tr>
@@ -34,7 +35,7 @@
         <tbody>
             {% for row in datas %}
             <tr>
-                {% for data in row %}
+                {% for data in row[1:] %}
                 <td>{{data}}</td>
                 {% endfor %}
              </tr>
